<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#EABDBD"
   >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#071057"
        android:gravity="center"
        android:textAlignment="center"
        android:theme="?actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:titleTextColor="@color/black"></androidx.appcompat.widget.Toolbar>
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_250sdp"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MaterialCardView2.Cut"
        app:cardBackgroundColor="@color/white"
        app:cardElevation="20dp"
        app:cardMaxElevation="10dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">
        <LinearLayout
            android:id="@+id/layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">
            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/find_trusted_doctors"
                android:textStyle="bold"
                android:padding="@dimen/_2sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_20sdp">

            </TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/intro"
                android:textSize="@dimen/_15sdp"
                >
            </TextView>
            <Button
                android:id="@+id/get_started"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/get_start"
                android:layout_gravity="bottom"
                android:padding="@dimen/_10sdp"
                android:textSize="@dimen/_15sdp"
                android:textAllCaps="false"
                android:layout_marginTop="@dimen/_35sdp"
                >
            </Button>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/card"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toolbar"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/face_image" />

</androidx.constraintlayout.widget.ConstraintLayout>
