<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.DoctorSignUpActivity">
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_350sdp"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MaterialCardView.Cut"
        app:cardBackgroundColor="#1565C0"
        app:cardElevation="20dp"
        app:cardMaxElevation="10dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">
       <androidx.appcompat.widget.LinearLayoutCompat
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:layout_gravity="center"
           android:gravity="center"
           android:orientation="vertical">
           <com.google.android.material.textfield.TextInputLayout
               android:id="@+id/name"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               app:boxStrokeWidthFocused="0dp"
               app:boxStrokeWidth="0dp"
               app:startIconDrawable="@drawable/person_icon"
               app:startIconTint="#1565C0"
               app:hintTextColor="#1565C0"
               android:hint="@string/enter_name">

               <com.google.android.material.textfield.TextInputEditText
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:textColor="@color/black"
                   android:inputType="text"
                   android:background="@drawable/rectangle_shape"
                   android:layout_margin="@dimen/_15sdp"
                   />
           </com.google.android.material.textfield.TextInputLayout>
           <com.google.android.material.textfield.TextInputLayout
               android:id="@+id/email"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               app:boxStrokeWidthFocused="0dp"
               app:boxStrokeWidth="0dp"
               app:startIconDrawable="@drawable/mail_icon"
               app:startIconTint="#1565C0"
               app:hintTextColor="#1565C0"
               android:hint="@string/enter_email">

               <com.google.android.material.textfield.TextInputEditText
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:textColor="@color/black"
                   android:inputType="text"
                   android:background="@drawable/rectangle_shape"
                   android:layout_margin="@dimen/_15sdp"
                   />
           </com.google.android.material.textfield.TextInputLayout>
           <com.google.android.material.textfield.TextInputLayout
               android:id="@+id/password"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               app:boxStrokeWidthFocused="0dp"
               app:boxStrokeWidth="0dp"
               app:startIconDrawable="@drawable/lock_icon"
               app:startIconTint="#1565C0"
               app:hintTextColor="#1565C0"
               android:hint="@string/enter_password">

               <com.google.android.material.textfield.TextInputEditText
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:textColor="@color/black"
                   android:inputType="textPassword"
                   android:background="@drawable/rectangle_shape"
                   android:layout_margin="@dimen/_15sdp"
                   />
           </com.google.android.material.textfield.TextInputLayout>
           <androidx.cardview.widget.CardView
               android:id="@+id/sign_up"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           app:cardElevation="20dp"
           app:cardCornerRadius="10dp"
           app:cardBackgroundColor="#1573DD"
               android:clickable="true"
           app:cardMaxElevation="15dp"
           app:cardPreventCornerOverlap="true"
          android:layout_margin="@dimen/_15sdp">
               <TextView
                   android:id="@+id/textview"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_margin="@dimen/_10sdp"
                   android:text="@string/sign_up"
                   android:layout_gravity="center"
                   android:gravity="center"
                   android:textSize="@dimen/_15sdp"
                   android:textColor="@color/white"
                   android:textAllCaps="false"/>
           </androidx.cardview.widget.CardView>
       </androidx.appcompat.widget.LinearLayoutCompat>

    </com.google.android.material.card.MaterialCardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="top"
        app:layout_constraintBottom_toTopOf="@+id/card"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:background="@drawable/buttom_custom_shape"
            android:textAlignment="center"
            android:theme="?actionBarTheme"
            app:titleTextColor="@color/black">
            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_gravity="center"
                android:textSize="@dimen/_18sdp"
                android:text="Doctor Sign Up"
                >
            </TextView>
        </androidx.appcompat.widget.Toolbar>
        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/img1" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>