<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom"
    android:orientation="vertical"
    android:padding="15dp"
    android:background="#1565C0"
    tools:context=".activities.PatientSignUpActivity">
    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="@dimen/_15sdp"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:text="Patient Sign Up" />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeWidthFocused="0dp"
            app:boxStrokeWidth="0dp"
            app:startIconDrawable="@drawable/person_icon"
            app:startIconTint="#1565C0"
            app:hintTextColor="#1565C0"
            android:hint="@string/enter_name">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:inputType="text"
                android:background="@drawable/rectangle_shape"
                android:layout_margin="@dimen/_15sdp"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeWidthFocused="0dp"
            app:boxStrokeWidth="0dp"
            app:startIconDrawable="@drawable/mail_icon"
            app:startIconTint="#1565C0"
            app:hintTextColor="#1565C0"
            android:hint="@string/enter_email">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:inputType="text"
                android:background="@drawable/rectangle_shape"
                android:layout_margin="@dimen/_15sdp"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeWidthFocused="0dp"
            app:boxStrokeWidth="0dp"
            app:startIconDrawable="@drawable/lock_icon"
            app:startIconTint="#1565C0"
            app:hintTextColor="#1565C0"
            android:hint="@string/enter_password">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:inputType="textPassword"
                android:background="@drawable/rectangle_shape"
                android:layout_margin="@dimen/_15sdp"
                />
            <androidx.cardview.widget.CardView
                android:id="@+id/countryCodePicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="20dp"
                app:cardCornerRadius="15dp"
                app:cardBackgroundColor="#FFFF"
                android:clickable="true"
                app:cardMaxElevation="15dp"
                app:cardPreventCornerOverlap="true"
                android:layout_margin="@dimen/_15sdp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:gravity="center"
                    >
                    <com.hbb20.CountryCodePicker
                        app:ccp_defaultNameCode="EG"
                        android:id="@+id/country_code"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:ccp_autoDetectCountry="true"
                        app:ccp_showFlag="true"
                        app:ccpDialog_backgroundColor="@color/white"
                        app:ccp_showNameCode="false"
                        app:ccp_showFullName="false">
                    </com.hbb20.CountryCodePicker>
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:boxStrokeWidthFocused="0dp"
                        app:boxStrokeWidth="0dp"
                        app:startIconTint="#1565C0"
                        app:hintTextColor="#1565C0"
                        android:hint="Enter phone number">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black"
                            android:inputType="number"
                            android:background="@drawable/rectangle_shape"
                            />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxStrokeWidthFocused="0dp"
                app:boxStrokeWidth="0dp"
                app:startIconTint="#1565C0"
                app:startIconDrawable="@drawable/date_icon"
                app:hintTextColor="#1565C0"
                android:hint="Enter birth day">

                <EditText
                    android:id="@+id/idEdtDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:inputType="text"
                    android:background="@drawable/rectangle_shape"
                    android:layout_margin="@dimen/_15sdp"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.card.MaterialCardView

                android:id="@+id/genderspinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="20dp"
                app:cardCornerRadius="15dp"
                app:cardBackgroundColor="#FFFF"
                android:clickable="true"
                app:cardMaxElevation="15dp"
                app:cardPreventCornerOverlap="true"
                android:layout_margin="@dimen/_15sdp">
                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/genderSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_margin="@dimen/_10sdp"
                    />
            </com.google.android.material.card.MaterialCardView>

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="20dp"
            app:cardCornerRadius="10dp"
            app:cardBackgroundColor="#1573DD"
            android:clickable="true"
            app:cardMaxElevation="15dp"
            app:cardPreventCornerOverlap="true"
            android:layout_margin="@dimen/_15sdp">
            <TextView
                android:id="@+id/textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:text="@string/sign_up"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="@dimen/_15sdp"
                android:textColor="@color/white"
                android:textAllCaps="false"/>
        </androidx.cardview.widget.CardView>

</LinearLayout>